:bug: fix overflow-y show scroll

--- a/src/scss/module/_typography.scss
+++ b/src/scss/module/_typography.scss
@@ -6,7 +6,7 @@ p {
   margin-top: 1rem;
   margin-bottom: 1rem;
   overflow-x: auto;
-  overflow-y: visible;
+  overflow-y: hidden;
 }
 
 h1,
